@@ -1,3 +1,5 @@
+=========1.4w10UCIb22===========
+- Polyglot now completely poll free...
 =========1.4w10UCIb21===========
 - Crash bug in memory command fixed
 - Small optimizations
